--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
-    "dexie": "^4.0.8",
     "ejs": "^3.1.8",
     "elysia": "^1.1.9",
     "esbuild": "^0.19.2",
@@ -79,14 +78,11 @@
     "nx": "19.6.4",
     "password-validator": "^5.3.0",
     "picocolors": "^1.0.0",
-    "pluralize": "^8.0.0",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "redux-watch": "^1.2.0",
-    "reflect-metadata": "^0.2.1",
     "rollup-plugin-generate-package-json": "^3.2.0",
-    "rxjs": "^7.8.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.0.2",
     "tailwindcss-animate": "^1.0.6",
@@ -94,11 +90,10 @@
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
     "typescript": "5.4.5",
-    "zod": "^3.23.8",
-    "zone.js": "0.14.4"
-  },
-  "dependencies": {
+    "zone.js": "0.14.4",
     "@angular/cdk": "^18.2.2",
+    "@angular/pwa": "^18.2.3",
+    "@angular/service-worker": "18.2.0",
     "@ng-icons/core": "^25.1.0",
     "@ng-icons/tabler-icons": "^29.5.0",
     "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.353",
@@ -134,5 +129,12 @@
     "ngx-scrollbar": "^13.0.1",
     "ngx-sonner": "^2.0.0",
     "ngxtension": "^4.0.0"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.2.1",
+    "rxjs": "^7.8.1",
+    "dexie": "^4.0.8",
+    "pluralize": "^8.0.0",
+    "zod": "^3.23.8"
   }
 }
