--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,10 @@
   "peerDependencies": {
     "rxjs": "^7.8.1",
     "reflect-metadata": "^0.2.1",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "dexie": "^4.0.8",
+    "pluralize": "^8.0.0",
+    "zod": "^3.23.8"
   },
   "typings": "./packages/client/src/index.d.ts",
   "module": "./index.esm.js",
