--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -7,21 +7,12 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true
   },
   "files": [],
   "include": [],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "tmp",
-    "coverage",
-    "jest.config.ts",
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ],
   "references": [
     {
       "path": "./tsconfig.lib.json"
