--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,6 @@
     "index.esm.js"
   ],
   "peerDependencies": {
-    "@borda/client": "latest",
     "rxjs": "^7.8.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
@@ -19,6 +18,7 @@
     "reflect-metadata": "^0.2.1"
   },
   "typings": "./packages/server/src/index.d.ts",
+  "types": "./packages/server/src/index.d.ts",
   "module": "./index.esm.js",
   "type": "module",
   "main": "./index.esm.js"
