--- a/packages/server/tsconfig.lib.json
+++ b/packages/server/tsconfig.lib.json
@@ -3,18 +3,10 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "skipLibCheck": true
   },
-  "include": ["**/*.ts", "**/*.d.ts"],
-  "exclude": [
-    "jest.config.ts",
-    "**/*.spec.ts",
-    "**/*.test.ts",
-    "jest.setup.ts",
-    "jest.config.ts",
-    "node_modules",
-    "node_modules/**",
-    "test"
-  ]
+  "files": ["./package.json"],
+  "include": ["**/*.ts", "./package.json"],
+  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
