--- a/apps/angular/tsconfig.app.json
+++ b/apps/angular/tsconfig.app.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "skipLibCheck": true
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"],
