--- a/package.json
+++ b/package.json
@@ -28,10 +28,6 @@
     "@angular/service-worker": "18.2.0",
     "@clack/core": "^0.2.1",
     "@clack/prompts": "^0.5.1",
-    "@elysiajs/cors": "^1.1.0",
-    "@elysiajs/eden": "^1.1.2",
-    "@elysiajs/html": "^1.1.0",
-    "@elysiajs/stream": "^1.1.0",
     "@faker-js/faker": "^8.4.1",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@ng-icons/core": "^25.1.0",
@@ -94,7 +90,6 @@
     "clsx": "^1.2.1",
     "dev": "^0.1.3",
     "ejs": "^3.1.8",
-    "elysia": "^1.1.9",
     "embla-carousel-angular": "^14.0.0",
     "esbuild": "^0.19.2",
     "eslint": "8.57.0",
@@ -106,7 +101,6 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.1.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "mongodb": "^6.9.0",
     "mongodb-memory-server": "^10.0.0",
     "ng-packagr": "~18.2.0",
     "ngx-date-fns": "^11.0.0",
@@ -126,8 +120,6 @@
     "tailwindcss-animate": "^1.0.6",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
-    "tslib": "^2.6.2",
-    "typescript": "5.4.5",
     "zone.js": "0.14.4"
   },
   "dependencies": {
@@ -135,6 +127,12 @@
     "rxjs": "^7.8.1",
     "dexie": "^4.0.8",
     "pluralize": "^8.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/html": "^1.1.0",
+    "elysia": "^1.1.9",
+    "mongodb": "^6.9.0",
+    "tslib": "^2.6.2",
+    "typescript": "5.4.5"
   }
 }
