--- a/apps/api/.env.new
+++ b/apps/api/.env.new
@@ -1,4 +1,4 @@
 # put your env variables for development here
 # remember to translate to production via kamal when deploying
-INSTANT_SIZE=10000
+INSTA_BATCH_SIZE=10000
 INSTA_MONGO_URI=mongodb://localhost:27017/insta-dev
