--- a/apps/db/Dockerfile
+++ b/apps/db/Dockerfile
@@ -6,13 +6,16 @@ LABEL maintainer="Stewan Silva <stewan@intenseloop.com>"
 RUN apt-get update && apt-get install -y sudo vim
 
 # Copy the setup scripts into the container
-COPY ./apps/demo-db/setup.sh /docker-entrypoint-initdb.d/
+COPY ./apps/db/setup.sh /docker-entrypoint-initdb.d/
 
 # Ensure the scripts have execute permissions
 RUN chmod +x /docker-entrypoint-initdb.d/setup.sh
 
 # Expose the default MongoDB port
 EXPOSE 27017
+
+# Set the entrypoint to ensure the script runs
+# ENTRYPOINT ["/docker-entrypoint-initdb.d/setup.sh"]
 
 # Start MongoDB
 CMD ["mongod"]
