--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -1,23 +1,21 @@
 {
-  "name": "demo-server",
+  "name": "api",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/demo-server/src",
+  "sourceRoot": "apps/api/src",
   "projectType": "application",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "docker build -f ./config/server-docker -t insta-server-demo ."
+          "docker build -f ./apps/api/Dockerfile -t insta-server-demo ."
         ]
       }
     },
     "preview": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": [
-          "docker run --env-file ./apps/demo-server/.env insta-server-demo"
-        ]
+        "commands": ["docker run --env-file ./apps/api/.env insta-server-demo"]
       }
     },
     "serve": {
@@ -25,7 +23,7 @@
       "options": {
         "commands": [
           "nx types server",
-          "bun run --env-file apps/demo-server/.env --watch apps/demo-server/src/main.ts"
+          "bun run --env-file apps/api/.env --watch apps/api/src/main.ts"
         ]
       }
     },
@@ -33,7 +31,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "tsc --noEmit --skipLibCheck --showConfig -p apps/demo-server/tsconfig.lib.json"
+          "tsc --noEmit --skipLibCheck --showConfig -p apps/api/tsconfig.lib.json"
         ]
       }
     },
@@ -42,7 +40,7 @@
       "options": {
         "commands": [
           "nx types server",
-          "bun build --compile --minify --sourcemap ./apps/demo-server/index.ts --outfile server"
+          "bun build --compile --minify --sourcemap ./apps/api/index.ts --outfile server"
         ]
       }
     },
