--- a/apps/tsconfig.json
+++ b/apps/tsconfig.json
@@ -10,6 +10,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "files": ["play.ts"],
+  "files": ["seed.ts"],
   "include": []
 }
