add docker build for api and db

--- a/apps/api/.env.new
+++ b/apps/api/.env.new
@@ -1,4 +1,4 @@
 # put your env variables for development here
-# remember to translate to production via kamal when deploying
+# remember to translate to production via kamal secrets when deploying
 INSTA_BATCH_SIZE=10000
-INSTA_MONGO_URI=mongodb://localhost:27017/insta-dev
+INSTA_MONGO_URI=mongodb://insta_user:insta_secure_password@insta-db:27017/insta?authSource=insta&directConnection=true
