add kamal deploy for api

--- a/.env.new
+++ b/.env.new
@@ -1,2 +1,4 @@
 KAMAL_REGISTRY_USERNAME=_YOUR_USERNAME_HERE_
 KAMAL_REGISTRY_PASSWORD=_YOUR_PASSWORD_HERE_
+INSTA_BATCH_SIZE=10000
+INSTA_MONGO_URI=mongodb://insta_user:insta_secure_password@insta-db:27017/insta?authSource=insta&directConnection=true
