--- a/apps/api/config/deploy.yml
+++ b/apps/api/config/deploy.yml
@@ -1,28 +1,37 @@
 <% require "dotenv"; Dotenv.load(".env") %>
-env:
-   secret:
-      - KAMAL_REGISTRY_PASSWORD
 
 # Name of your application. Used to uniquely configure containers.
-service: insta-api
+service: insta
 
 # Name of the container image.
-image: instante/server-demo
+image: intenseloop/insta-api
 
 # Deploy to these servers.
+primary_role: api
 servers:
-  web:
-    - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bin/jobs
+  api:
+    hosts:
+      - 172.206.58.38
+
+# Configure SSH.
+ssh:
+  user: super
+  keys_only: true
+  keys: [ "~/.ssh/insta.pem" ]
+  # log_level: debug
 
 # Enable SSL auto certification via Let's Encrypt (and allow for multiple apps on one server).
 # Set ssl: false if using something like Cloudflare to terminate SSL (but keep host!).
 proxy:
+  app_port: 1337
   ssl: true
-  host: insta-api.stewan.io
+  host: 'insta-api.intenseloop.com'
+  forward_headers: true
+  response_timeout: 90
+  healthcheck:
+    interval: 10
+    path: /
+    timeout: 300
 
 # Credentials for your image host.
 registry:
@@ -36,9 +45,9 @@ registry:
 
 # Configure builder setup.
 builder:
-  arch: amd64
-  dockerfile: ./Dockerfile
-  context: "../../"
+  arch: arm64
+  dockerfile: ./apps/api/Dockerfile
+  context: "."
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
