--- a/apps/db/config/deploy.yml
+++ b/apps/db/config/deploy.yml
@@ -1,28 +1,21 @@
 <% require "dotenv"; Dotenv.load(".env") %>
-env:
-   secret:
-      - KAMAL_REGISTRY_PASSWORD
 
 # Name of your application. Used to uniquely configure containers.
-service: insta-api
+service: insta
 
 # Name of the container image.
-image: instante/server-demo
+image: intenseloop/insta-db
 
-# Deploy to these servers.
+primary_role: db
 servers:
-  web:
-    - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bin/jobs
-
-# Enable SSL auto certification via Let's Encrypt (and allow for multiple apps on one server).
-# Set ssl: false if using something like Cloudflare to terminate SSL (but keep host!).
-proxy:
-  ssl: true
-  host: insta-api.stewan.io
+  db:
+    hosts: 
+      - 172.206.58.38
+ssh:
+  user: super
+  keys_only: true
+  keys: [ "~/.ssh/insta.pem" ]
+  # log_level: debug
 
 # Credentials for your image host.
 registry:
@@ -36,9 +29,9 @@ registry:
 
 # Configure builder setup.
 builder:
-  arch: amd64
-  dockerfile: ./config/server-docker
-  context: ".."
+  arch: arm64
+  dockerfile: ./apps/db/Dockerfile
+  context: "."
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
@@ -78,24 +71,13 @@ builder:
 
 # Use accessory services (secrets come from .kamal/secrets).
 #
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     port: 3306
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: redis:7.0
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
+accessories:
+  db:
+    image: intenseloop/insta-db
+    host: 172.206.58.38
+    port: 27017
+    files:
+      - apps/db/config/access:/config/access
+      - apps/db/config/log:/config/log
+    directories:
+      - data:/data/db
