--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
@@ -83,7 +82,6 @@
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "^7.16.0",
     "autoprefixer": "^10.4.0",
-    "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
@@ -107,7 +105,6 @@
     "ngx-sonner": "^2.0.0",
     "ngxtension": "^4.0.0",
     "nx": "19.6.4",
-    "password-validator": "^5.3.0",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
@@ -133,6 +130,9 @@
     "mongodb": "^6.9.0",
     "tslib": "^2.6.2",
     "typescript": "5.4.5",
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.2",
+    "password-validator": "^5.3.0"
   }
 }
