--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Bun image
 FROM oven/bun:alpine
+# FROM node:18-alpine
 LABEL maintainer="Stewan Silva <stewan@intenseloop.com>"
 
 # Create and change to the app directory.
@@ -8,10 +8,7 @@ WORKDIR /usr/src/app
 # Copy local code to the container image.
 COPY ./ ./
 
-# Install 
-RUN bun install --production
-
 EXPOSE 80
 
-# Run the seed and then the web service on container startup.
-CMD ["bun", "apps/api/src/main.ts"]
+# Run the web service on container startup.
+CMD ["bun", "server.ts"]
