--- a/apps/app/tsconfig.editor.json
+++ b/apps/app/tsconfig.editor.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"],
-    "skipLibCheck": true
+    "types": ["jest", "node", "bun-types"]
   }
 }
