--- a/package.json
+++ b/package.json
@@ -119,20 +119,21 @@
     "zone.js": "0.14.4"
   },
   "dependencies": {
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
-    "dexie": "^4.0.8",
-    "pluralize": "^8.0.0",
-    "zod": "^3.23.8",
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/html": "^1.1.0",
+    "@faker-js/faker": "^8.4.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bun": "^1.1.10",
+    "bcryptjs": "^2.4.3",
+    "dexie": "^4.0.8",
     "elysia": "^1.1.9",
     "mongodb": "^6.9.0",
+    "password-validator": "^5.3.0",
+    "pluralize": "^8.0.0",
+    "reflect-metadata": "^0.2.1",
+    "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "typescript": "5.4.5",
-    "@faker-js/faker": "^8.4.1",
-    "bcryptjs": "^2.4.3",
-    "@types/bcryptjs": "^2.4.2",
-    "password-validator": "^5.3.0"
+    "zod": "^3.23.8"
   }
 }
