--- a/apps/app/ngsw-config.json
+++ b/apps/app/ngsw-config.json
@@ -6,16 +6,7 @@
       "name": "app",
       "installMode": "prefetch",
       "resources": {
-        "files": [
-          "/",
-          "/favicon.ico",
-          "/index.html",
-          "/manifest.json",
-          "/ngsw.json",
-          "/*.css",
-          "/*.js",
-          "/assets/icons/*"
-        ]
+        "files": ["/favicon.ico", "/index.html", "/*.css", "/*.js", "/assets/icons/*"]
       }
     },
     {
