--- a/apps/app/ngsw-config.json
+++ b/apps/app/ngsw-config.json
@@ -37,6 +37,15 @@
         "maxAge": "0u",
         "strategy": "freshness"
       }
+    },
+    {
+      "name": "root",
+      "urls": ["/index.html"],
+      "cacheConfig": {
+        "maxSize": 0,
+        "maxAge": "0u",
+        "strategy": "freshness"
+      }
     }
   ]
 }
