--- a/apps/app/ngsw-config.json
+++ b/apps/app/ngsw-config.json
@@ -27,25 +27,5 @@
       }
     }
   ],
-  "navigationUrls": ["/**", "!/**/*.{js,css,json,ico}"],
-  "dataGroups": [
-    {
-      "name": "ngsw-json",
-      "urls": ["/ngsw.json"],
-      "cacheConfig": {
-        "maxSize": 0,
-        "maxAge": "0u",
-        "strategy": "freshness"
-      }
-    },
-    {
-      "name": "root",
-      "urls": ["/index.html"],
-      "cacheConfig": {
-        "maxSize": 0,
-        "maxAge": "0u",
-        "strategy": "freshness"
-      }
-    }
-  ]
+  "navigationUrls": ["/**", "!/**/*.{js,css,json,ico}"]
 }
