--- a/package.json
+++ b/package.json
@@ -116,14 +116,13 @@
     "tailwindcss-animate": "^1.0.6",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.1",
-    "zone.js": "0.14.4"
+    "bun-types": "^1.1.29"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/html": "^1.1.0",
     "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.2",
-    "@types/bun": "^1.1.10",
     "bcryptjs": "^2.4.3",
     "dexie": "^4.0.8",
     "elysia": "^1.1.9",
