--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
     "@elysiajs/html": "^1.1.0",
+    "@elysiajs/jwt": "^1.1.1",
     "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
